tests/invalid/syntax/missing_param_type.fig
// Invalid: Missing parameter type in function
func broken_function(x, y: i32) -> i32
    return x + y
